Adding count route
* /count gives number of shorts
* Specs
* Updated api docs
