# config/routes.rb
@@ -3,6 +3,7 @@ Rails.application.routes.draw do
 
   resources(:shorts, path: '/', only: %i[create destroy show]) do
     collection do
+      get('/count', to: 'shorts#count')
       post('/suggestion', to: 'shorts#suggest')
     end
   end
